--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "type": "module",
   "scripts": {
     "start": "vite",
+    "host": "vite --host",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
@@ -13,6 +14,7 @@
     "@react-three/fiber": "8.11.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-joystick-component": "^6.2.1",
     "three": "0.149.0",
     "zustand": "^4.3.9"
   },
